--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
     <!-- Featured Products -->
-    <section class="text-center">
+    <section class="container mx-auto text-center">
       <h1 class="text-[45px] font-extrabold mt-[141px] mb-5">
         Our Featured Products
       </h1>
@@ -135,6 +135,68 @@
     </section>
 
     <!-- Great Tea, Freshly -->
-    <section></section>
+    <section
+      class="container mx-auto flex flex-col md:flex-row justify-center mt-[130px] gap-[52px]"
+    >
+      <div class="left-about-section grid grid-rows-4 grid-flow-col gap-[30px]">
+        <div
+          class="bg-linear-to-r from-[#FF0000] to-[#FF8938] w-[238px] h-[136px] opacity-10 rounded-md"
+        ></div>
+        <div
+          class="bg-[#E6A623]/10 flex justify-center items-center pt-[58px] pr-[30px] pb-[30px] pl-[30px] rounded-md row-span-2"
+        >
+          <img src="./images/fresh-1.png" alt="" />
+        </div>
+        <div
+          class="bg-[#577639]/10 flex justify-center items-center pt-[58px] pr-[30px] pb-[30px] pl-[30px] rounded-md row-span-2"
+        >
+          <img src="./images/fresh-2.png" alt="" />
+        </div>
+        <div
+          class="bg-linear-to-r from-[#270707] to-[#FFFFFF/0] w-[238px] h-[136px] opacity-10 rounded-md mt-[30px]"
+        ></div>
+      </div>
+
+      <div class="right-about-section flex flex-col text-center md:text-start">
+        <h1 class="text-[45px] font-extrabold text-[#1C1C1C]">
+          Great Tea, Freshly <br />
+          Presented
+        </h1>
+        <p class="text-[16px] text-[#777777] pt-[20px]">
+          The meaning of gong cha is chanese is to provide the best tea to
+          emperor<br />
+          from all possessions . It represents the highest quality and self
+          expectation.<br />
+          Establishing in 2006, Gong cha had been deeply appreciated by its
+          custoers<br />
+          because of good words of mouth and unique customized service
+          orginated<br />
+          from Taiwan.
+        </p>
+
+        <div class="pt-[30px] pb-[20px]">
+          <h1 class="text-[#1C1C1C] text-[20px] font-extrabold">
+            Unique Taste
+          </h1>
+          <p class="text-[#777777]">
+            A Unique and different style from other teapots gives a <br />
+            luxurious and minimalist impression
+          </p>
+        </div>
+
+        <div>
+          <h1 class="text-[#1C1C1C] text-[20px] font-extrabold">
+            Premium Quality
+          </h1>
+          <p class="text-[#777777]">
+            Premium Quality that makes tea more elegant and more <br />durable
+            when you use it.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Comments Section -->
+    <section class="container mx-auto">lol</section>
   </body>
 </html>
