--- a/index.html
+++ b/index.html
@@ -197,6 +197,110 @@
     </section>
 
     <!-- Comments Section -->
-    <section class="container mx-auto">lol</section>
+    <section class="container max-w-[1140px] mx-auto">
+      <div
+        class="bg-linear-to-r from-[#FF8938] to-[#FF0000] flex justify-center items-center gap-[50px] rounded-md pb-[145px]"
+      >
+        <div class="left-comments-section flex flex-col gap-[20px]">
+          <h1 class="text-[45px] font-extrabold text-white pt-[145px]">
+            Meet Our Super Clients
+          </h1>
+          <p class="text-[16px] text-[#F4F4F4]">
+            There are many variations of passages of Lorem Ipsum <br />
+            available, but the majority have suffered alteration in some <br />
+            form, by injected humour, or randomised words which don't <br />
+            look even slightly believable.
+          </p>
+          <button
+            class="rounded-md bg-white flex gap-2.5 px-[20px] py-[18px] font-bold text-[20px] inline"
+          >
+            <span
+              class="bg-linear-to-r from-[#FF8938] to-[#FF0000] bg-clip-text text-transparent"
+            >
+              Show All
+            </span>
+          </button>
+        </div>
+
+        <div class="right-comments-section relative bottom-[-130px]">
+          <!-- One Comment -->
+          <div class="absolute top-[100px] z-50">
+            <div class="relative">
+              <div
+                class="client bg-white shadow-2xl w-[433px] h-[233px] rounded-md text-start pl-[50px] pt-[41px]"
+              >
+                <img
+                  src="./images/client.png"
+                  alt=""
+                  class="absolute top-[-30px] left-[-30px] border-2 border-white rounded-4xl"
+                />
+                <div class="flex justify-center flex-col gap-[20px]">
+                  <p>
+                    We are providing the best and suitable home insurance
+                    services for the people who are interested to treatment
+                  </p>
+                  <div>
+                    <h1>Ilham Yuda</h1>
+                    <p>Businessman</p>
+                  </div>
+                </div>
+                <!-- <img src="./images/circles.png" alt="" class="absolute bottom-0" /> -->
+              </div>
+            </div>
+          </div>
+
+          <!-- Comment Two -->
+          <div class="relative opacity-50 left-[50px]">
+            <div
+              class="client bg-white shadow-2xl w-[433px] h-[233px] rounded-md text-start pl-[50px] pt-[41px]"
+            >
+              <img
+                src="./images/client.png"
+                alt=""
+                class="absolute top-[-30px] left-[-30px] border-2 border-white rounded-4xl"
+              />
+              <div class="flex justify-center flex-col gap-[20px]">
+                <p>
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <div>
+                  <h1>Ilham Yuda</h1>
+                  <p>Businessman</p>
+                </div>
+              </div>
+              <!-- <img src="./images/circles.png" alt="" class="absolute bottom-0" /> -->
+            </div>
+          </div>
+
+          <!-- Comment Three -->
+          <div class="relative opacity-50 left-[50px] mt-[50px]">
+            <div
+              class="client bg-white shadow-2xl w-[433px] h-[233px] rounded-md text-start pl-[50px] pt-[41px]"
+            >
+              <img
+                src="./images/client.png"
+                alt=""
+                class="absolute top-[-30px] left-[-30px] border-2 border-white rounded-4xl"
+              />
+              <div class="flex justify-center flex-col gap-[20px]">
+                <p>
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <div>
+                  <h1>Ilham Yuda</h1>
+                  <p>Businessman</p>
+                </div>
+              </div>
+              <!-- <img src="./images/circles.png" alt="" class="absolute bottom-0" /> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- News and Events Section -->
+    <section></section>
   </body>
 </html>
