news section done

--- a/index.html
+++ b/index.html
@@ -301,6 +301,72 @@
     </section>
 
     <!-- News and Events Section -->
-    <section></section>
+    <section class="my-[130px]">
+      <div class="text-center">
+        <h1 class="text-[45px]">News & Events</h1>
+        <p class="text-[#777777] mb-[50px]">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, <br />
+          by injected humour, or randomised words which don't look even slightly
+          believable.
+        </p>
+      </div>
+
+      <div class="flex justify-center items-center gap-[24px]">
+        <!-- News Particularly -->
+        <div
+          class="border-[#D2D2D2] border-1 flex flex-col justify-center items-start gap-[20px] p-[21px] rounded-md"
+        >
+          <img src="./images/news-1.png" alt="" class="" />
+          <div>
+            <p class="text-[16px] text-[#777777]">Feb 05, 2027</p>
+            <h1 class="text-[20px] font-extrabold text-[#1C1C1C]">
+              Collecting 8 Points for <br />discount
+            </h1>
+            <p class="text-[#777777]">
+              There are many variations of passages of <br />
+              Lorem Ipsum available.
+            </p>
+          </div>
+          <h3>Learn More</h3>
+        </div>
+
+        <!-- News Particularly -->
+        <div
+          class="border-[#D2D2D2] border-1 flex flex-col justify-center items-start gap-[20px] p-[21px] rounded-md"
+        >
+          <img src="./images/news-2.png" alt="" class="" />
+          <div>
+            <p class="text-[16px] text-[#777777]">Feb 05, 2027</p>
+            <h1 class="text-[20px] font-extrabold text-[#1C1C1C]">
+              Collecting 8 Points for <br />discount
+            </h1>
+            <p class="text-[#777777]">
+              There are many variations of passages of <br />
+              Lorem Ipsum available.
+            </p>
+          </div>
+          <h3>Learn More</h3>
+        </div>
+
+        <!-- News Particularly -->
+        <div
+          class="border-[#D2D2D2] border-1 flex flex-col justify-center items-start gap-[20px] p-[21px] rounded-md"
+        >
+          <img src="./images/news-3.png" alt="" class="" />
+          <div>
+            <p class="text-[16px] text-[#777777]">Feb 05, 2027</p>
+            <h1 class="text-[20px] font-extrabold text-[#1C1C1C]">
+              Collecting 8 Points for <br />discount
+            </h1>
+            <p class="text-[#777777]">
+              There are many variations of passages of <br />
+              Lorem Ipsum available.
+            </p>
+          </div>
+          <h3>Learn More</h3>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
