working on footer

--- a/index.html
+++ b/index.html
@@ -368,5 +368,58 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="bg-[#FF8938]/10">
+      <div class="container mx-auto">
+        <div class="top-footer flex justify-between items-center pt-[130px]">
+          <div>
+            <img src="./images/cup.png" alt="" />
+          </div>
+          <div class="flex justify-center items-center gap-10">
+            Ready to get started?
+            <button
+              class="rounded-md bg-linear-to-r from-[#FF8938] to-[#FF0000] text-white flex gap-2.5 px-[20px] py-[18px] font-bold text-[20px]"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+        <div class="down-footer">
+          <div>
+            <p>Quick Links</p>
+            <ul>
+              <li>home</li>
+              <li>About Us</li>
+              <li>insurance</li>
+              <li>Privacy Policy</li>
+            </ul>
+          </div>
+
+          <div>
+            <p>Our Service</p>
+            <ul>
+              <li>Life Insurance</li>
+              <li>Car Insurance</li>
+              <li>Health Insurance</li>
+              <li>House Insurance</li>
+            </ul>
+          </div>
+
+          <div>
+            <p>Help</p>
+            <ul>
+              <li>FAQs</li>
+              <li>Contact Us</li>
+            </ul>
+          </div>
+
+          <div>
+            <p>Subscribe to Our newsletter</p>
+            <input type="text" placeholder="Email Address" />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
