--- a/index.html
+++ b/index.html
@@ -385,11 +385,13 @@
             </button>
           </div>
         </div>
-        <div class="down-footer">
+        <div
+          class="down-footer flex gap-[172px] justify-center items-start pt-[40px]"
+        >
           <div>
-            <p>Quick Links</p>
-            <ul>
-              <li>home</li>
+            <p class="font-extrabold">Quick Links</p>
+            <ul class="flex flex-col gap-2 pt-4">
+              <li>Home</li>
               <li>About Us</li>
               <li>insurance</li>
               <li>Privacy Policy</li>
@@ -397,8 +399,8 @@
           </div>
 
           <div>
-            <p>Our Service</p>
-            <ul>
+            <p class="font-extrabold">Our Service</p>
+            <ul class="flex flex-col gap-2 pt-4">
               <li>Life Insurance</li>
               <li>Car Insurance</li>
               <li>Health Insurance</li>
@@ -407,18 +409,38 @@
           </div>
 
           <div>
-            <p>Help</p>
-            <ul>
+            <p class="font-extrabold">Help</p>
+            <ul class="flex flex-col gap-2 pt-4">
               <li>FAQs</li>
               <li>Contact Us</li>
             </ul>
           </div>
 
           <div>
-            <p>Subscribe to Our newsletter</p>
-            <input type="text" placeholder="Email Address" />
+            <p class="font-extrabold">Subscribe to Our newsletter</p>
+            <div class="flex justify-center items-center gap-5 pb-5">
+              <input
+                type="text"
+                placeholder="Email Address"
+                class="border-b-2"
+              />
+              <button
+                class="rounded-[100%] bg-linear-to-r from-[#FF8938] to-[#FF0000] text-white flex gap-2.5 px-[10px] py-[10px] font-bold text-[15px]"
+              >
+                >
+              </button>
+            </div>
+            <div class="socials flex gap-2">
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+            </div>
           </div>
         </div>
+
+        <h1 class="text-center py-20">
+          © 2027 UIDesign.to - All rights reserved.
+        </h1>
       </div>
     </footer>
   </body>
